HEADER > fix sub items width and spacing

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -35,11 +35,11 @@ header {
   position: absolute;
   left: 0;
   top: 50px;
-  min-width: 300px;
+  min-width: 280px;
   background-color: #fff;
   border: 1px solid $color-geyser;
   border-radius: 10px;
-  padding: 10px 20px;
+  padding: 10px;
   transform: translate(-25%, 10px);
   opacity: 0;
   transition: all $fast-animation ease-in-out;
@@ -63,7 +63,7 @@ header {
     cursor: pointer;
 
     &:not(:last-of-type) {
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     & > img {
@@ -83,9 +83,12 @@ header {
     border-color: $color-aqua;
   }
 
-  &.practices li:hover {
-    background-color: #fff9f7;
-    border-color: $color-princess;   
+  &.practices {
+    min-width: 230px;
+    li:hover {
+      background-color: #fff9f7;
+      border-color: $color-princess;   
+    }
   }
 
  
